# adv_mla_ass1

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py  submission.csv  submission_week2.csv  submission_week3.csv  submission_week3_1.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/: best_model_week1.joblib  best_model_week2.joblib
notebooks/: Shi_Wu_24623845_week1_LightGBM.ipynb  Shi_Wu_24623845_week2_LightGBM_feature_engineering.ipynb  Shi_Wu_24623845_week3_stacking(LightGBM+RF).ipynb  Wu_Shi_24623845_week1_RF.ipynb
reports/: 36120 - AdvMLA - AT1 Report final.docx  ShiWu_24623845_experiment_2.docx  ShiWu_24623845_experiment_3.docx  ShiWu_24623845_experiment_3.pages
src/data/: DataProcessor.py
src/visualization/: FeatureImportant.py  shap_plot.py
